hphp/hack/test/typecheck/construct_default_values.php.coeffects.exp
File "construct_default_values.php", line 12, characters 22-36:
Variable `$#capability` is undefined, or not always defined. (Naming[2050])
  File "construct_default_values.php", line 11, characters 15-16:
  Did you mean `$b` instead?
File "construct_default_values.php", line 12, characters 29-29:
Read access to `$this->b` before initialization (Typing[4083])
